# Inventory-Management-System

C++/: CMakeLists.txt  main.cpp
Java/: .gitignore
Java/src/: Main.java
Python/: Data.py  UI.py
c/: CMakeLists.txt  data.txt  main.c
c++/: CMakeLists.txt  inventory.txt  main.cpp
java/: .gitignore  data.json  inventory.txt
java/src/: Inventory.java  Item.java  Main.java  Window.java
python/: .gitignore  functions.py  inventory.json  main.py  widgets.py
